--- a/landing_page/less/articles.less
+++ b/landing_page/less/articles.less
@@ -47,14 +47,15 @@
       font-family: Montserrat;
       font-style: normal;
       font-weight: 600;
-      font-size: 4.8rem;
+      font-size: 4.2rem;
       line-height: 3.7rem;
+      margin-bottom: 1.5rem;
     }
     p {
       font-family: Montserrat;
       font-style: normal;
       font-weight: 500;
-      font-size: 2.8rem;
+      font-size: 2.4rem;
       line-height: 3.7rem;
     }
   }
@@ -64,7 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-bottom: 2rem;
+  margin-bottom: 10rem;
 
   @media @tablet {
     display: flex;
@@ -78,7 +79,7 @@
     margin: 0;
   }
   section {
-    margin: 1rem;
+    margin: 1rem 4rem;
     @media @tablet {
       margin: 3rem auto;
     }
