--- a/landing_page/less/global.less
+++ b/landing_page/less/global.less
@@ -3,7 +3,7 @@
 .header-nav-container {
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
-  max-width: 900px;
+  max-width: 980px;
   margin: auto auto;
 
   @media @phone {
