--- a/landing_page/less/header.less
+++ b/landing_page/less/header.less
@@ -14,7 +14,7 @@ header {
     display: flex;
     flex-direction: column;
     flex: 1;
-    width: 50%;
+    width: 55%;
     align-items: flex-start;
     justify-content: space-evenly;
 
@@ -27,23 +27,24 @@ header {
       width: auto;
     }
 
+    // h1 {
+    //   font-size: 72px;
+    //   font-weight: 500;
+    //   margin-top: 150px;
+    //   line-height: 88px;
+    // }
+    // p {
+    //   font-size: 24px;
+    //   font-weight: 500;
+    //   margin-top: 50px;
+    //   line-height: 37px;
+    // }
     h1 {
-      font-size: 72px;
-      font-weight: 500;
-      margin-top: 150px;
-      line-height: 88px;
-    }
-    p {
-      font-size: 24px;
-      font-weight: 500;
-      margin-top: 50px;
-      line-height: 37px;
-    }
-    h1 {
-      font-size: 7.2rem;
+      font-size: 6.5rem;
       font-weight: 500;
       margin-top: 15rem;
-      line-height: 8.8rem;
+      line-height: 7rem;
+
       @media @tablet {
         font-size: 5.5rem;
         font-weight: 500;
@@ -52,7 +53,7 @@ header {
       }
     }
     p {
-      font-size: 2.4rem;
+      font-size: 2rem;
       font-weight: 500;
       margin-top: 5rem;
       line-height: 3.7rem;
@@ -108,3 +109,129 @@ header {
     }
   }
 }
+
+// .header-content2 {
+//   // display: flex;
+//   // flex: 1 20%;
+//   // align-items: center;
+//   // justify-content: space-between;
+
+//   .img-div {
+//     // background-color: aqua;
+//     border: 1px dashed red;
+//     position: absolute;
+//     // display: flex;
+//     // flex: 2;
+//     top: 0;
+//     left: 0;
+//     // width: 75%;
+//     height: 100px;
+//     z-index: -1;
+//     // img {
+//     //   width: 100%;
+//     // }
+//   }
+
+//   .text-div {
+//     // background-color: red;
+//     border: 1px dashed #696;
+//     // z-index: 1;
+//     position: relative;
+//     height: 100px;
+//     // display: flex;
+//     // flex-direction: column;
+//     // flex: 1;
+//     width: 50%;
+//     // align-items: flex-start;
+//     // justify-content: space-evenly;
+
+//     @media @tablet {
+//       width: auto;
+//       margin: auto 1.1rem;
+//     }
+
+//     @media @phone {
+//       width: auto;
+//     }
+
+//     h1 {
+//       font-size: 72px;
+//       font-weight: 500;
+//       margin-top: 150px;
+//       line-height: 88px;
+//     }
+//     p {
+//       font-size: 24px;
+//       font-weight: 500;
+//       margin-top: 50px;
+//       line-height: 37px;
+//     }
+//     h1 {
+//       font-size: 7.2rem;
+//       font-weight: 500;
+//       margin-top: 15rem;
+//       line-height: 8.8rem;
+//       @media @tablet {
+//         font-size: 5.5rem;
+//         font-weight: 500;
+//         margin-top: 10rem;
+//         line-height: 6rem;
+//       }
+//     }
+//     p {
+//       font-size: 2.4rem;
+//       font-weight: 500;
+//       margin-top: 5rem;
+//       line-height: 3.7rem;
+
+//       @media @tablet {
+//         margin-top: 1rem;
+//       }
+
+//       @media @tablet {
+//         font-size: 2rem;
+//       }
+//     }
+//     .header-btn {
+//       margin-top: 5rem;
+//       display: flex;
+//       flex: 1;
+//       align-items: flex-start;
+//       justify-content: space-evenly;
+
+//       @media @phone {
+//         display: flex;
+//         flex-direction: column;
+//         align-items: center;
+//         margin: 2rem 0;
+//       }
+//       button {
+//         @media @phone {
+//           margin: 0.5rem 0;
+//         }
+//         margin-right: 2rem;
+//         width: 23rem;
+//         height: 4.5rem;
+//         border-radius: 5px;
+
+//         font-family: Montserrat;
+//         font-style: normal;
+//         font-weight: bold;
+//         font-size: 2.4rem;
+//         line-height: 3.7rem;
+//       }
+//       .btn1 {
+//         background: #d21f3c;
+
+//         border-radius: 0.5rem;
+//         color: #ffffff;
+//       }
+//       .btn2 {
+//         background: #ffffff;
+//         border: 0.3rem solid #d21f3c;
+//         box-sizing: border-box;
+//         border-radius: 0.5rem;
+//       }
+//     }
+//   }
+// }
