--- a/landing_page/less/nav.less
+++ b/landing_page/less/nav.less
@@ -9,7 +9,7 @@
 
     width: 100%;
     padding: 2rem 0;
-    margin-top: 4rem;
+    // margin-top: 4rem;
     margin-bottom: -2rem;
 
     @media @phone {
